# griptape-chat

./: .dockerignore  .env.example  Dockerfile  README.md  README_test.md  app.py  conversation_memory.json  docker-compose.yml  pyproject.toml
griptape/: chat.py  chat_interface.py
griptape/chat_cloud/: __init__.py  chat_aws_cloud.py  chat_cloud.py  chat_gt_cloud.py
griptape/chat_demo/: __init__.py  chat.py  chat_azure.py
griptape/chat_local/: __init__.py  chat_local.py
structure/: app.py
