[tool.poetry]
name = "griptape-chat"
version = "0.29"
description = "Chat demo using the Griptape Framework and Gradio."
authors = ["Griptape <hello@griptape.ai>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/griptape-ai/griptape-chat"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
gradio = "^4.37.1"
griptape = "^0.29"
attrs = "^23.1.0"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
